<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/yellow"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:layout_editor_absoluteY="25dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/appTitle"
        android:layout_marginTop="@dimen/spacing_3.5x"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:paddingTop="@dimen/spacing_3x"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/email"
        style="@style/EnterEditText"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/appTitle"
        app:layout_constraintBottom_toTopOf="@id/password"
        android:layout_marginTop="@dimen/spacing_9x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/password"
        style="@style/EnterEditText"
        android:hint="@string/enter_password"
        android:layout_marginTop="@dimen/spacing_4x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/email"/>

    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/loginBtn"
        android:text="@string/login"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/anonymous"
        style="@style/SimpleLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anonymous"/>


</LinearLayout>