<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include
        android:id="@+id/navigationLayout"
        layout="@layout/view_navigation"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:layout_constraintTop_toBottomOf="@id/navigationLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_0.5x"
            android:indeterminate="false"
            tools:max="100"
            tools:progress="20"/>

        <!--<TextView-->
            <!--android:id="@+id/otpProgressText"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--tools:text="1:56"/>-->

    </FrameLayout>

    <TextView
        android:id="@+id/wantedNumber"
        style="@style/WantedNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/navigationLayout"
        tools:text="435"
        />

    <android.support.v7.widget.RecyclerView
        android:paddingTop="@dimen/spacing_1x"
        android:id="@+id/givenNumbersRecycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/spacing_12x"
        android:orientation="horizontal"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/wantedNumber"/>

    <TextView
        android:id="@+id/plus"
        style="@style/MathSign"
        android:layout_width="@dimen/spacing_7x"
        android:layout_height="@dimen/spacing_7x"
        android:layout_margin="@dimen/spacing_1x"
        android:text="@string/plus"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/minus"
        app:layout_constraintTop_toBottomOf="@id/givenNumbersRecycle"
        tools:text="+"/>

    <TextView
        android:id="@+id/minus"
        style="@style/MathSign"
        android:layout_width="@dimen/spacing_7x"
        android:layout_height="@dimen/spacing_7x"
        android:layout_margin="@dimen/spacing_1x"
        android:text="@string/minus"
        app:layout_constraintLeft_toRightOf="@id/plus"
        app:layout_constraintRight_toLeftOf="@id/times"
        app:layout_constraintTop_toBottomOf="@id/givenNumbersRecycle"
        tools:text="-"/>

    <TextView
        android:id="@+id/times"
        style="@style/MathSign"
        android:layout_width="@dimen/spacing_7x"
        android:layout_height="@dimen/spacing_7x"
        android:layout_margin="@dimen/spacing_1x"
        android:text="@string/times"
        app:layout_constraintLeft_toRightOf="@id/minus"
        app:layout_constraintRight_toLeftOf="@id/divide"
        app:layout_constraintTop_toBottomOf="@id/givenNumbersRecycle"
        tools:text="*"/>

    <TextView
        android:id="@+id/divide"
        style="@style/MathSign"
        android:layout_width="@dimen/spacing_7x"
        android:layout_height="@dimen/spacing_7x"
        android:layout_margin="@dimen/spacing_1x"
        android:text="@string/divide"
        app:layout_constraintLeft_toRightOf="@id/times"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/givenNumbersRecycle"
        tools:text="/"/>

    <TextView
        android:id="@+id/firstOperand"
        style="@style/NumbersView"
        android:layout_width="@dimen/spacing_7x"
        android:layout_height="@dimen/spacing_7x"
        android:layout_marginLeft="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_2x"
        android:layout_marginRight="@dimen/spacing_1x"
        android:background="@drawable/bg_new_letter_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/operator"
        app:layout_constraintTop_toBottomOf="@id/plus"/>

    <TextView
        android:id="@+id/operator"
        style="@style/NumbersView"
        android:layout_width="@dimen/spacing_7x"
        android:layout_height="@dimen/spacing_7x"
        android:layout_marginTop="@dimen/spacing_2x"
        android:layout_marginRight="@dimen/spacing_1x"
        android:background="@drawable/bg_operator"
        app:layout_constraintLeft_toRightOf="@id/firstOperand"
        app:layout_constraintRight_toLeftOf="@id/secondOperand"
        app:layout_constraintTop_toBottomOf="@id/plus"/>

    <TextView
        android:id="@+id/secondOperand"
        style="@style/NumbersView"
        android:layout_width="@dimen/spacing_7x"
        android:layout_height="@dimen/spacing_7x"
        android:layout_marginTop="@dimen/spacing_2x"
        android:layout_marginRight="@dimen/spacing_1x"
        android:background="@drawable/bg_new_letter_btn"
        app:layout_constraintLeft_toRightOf="@id/operator"
        app:layout_constraintRight_toLeftOf="@id/destroyBtn"
        app:layout_constraintTop_toBottomOf="@id/plus"/>

    <ImageView
        android:id="@+id/calculate"
        android:layout_width="@dimen/spacing_7x"
        android:layout_height="@dimen/spacing_7x"
        android:layout_marginTop="@dimen/spacing_2x"
        android:layout_marginRight="@dimen/spacing_1x"
        android:background="@drawable/bg_save_btn"
        android:src="@drawable/ic_play"
        app:layout_constraintLeft_toRightOf="@id/destroyBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plus"/>

    <TextView
        android:id="@+id/destroyBtn"
        style="@style/NumbersView"
        android:layout_width="@dimen/spacing_7x"
        android:layout_height="@dimen/spacing_7x"
        android:layout_marginTop="@dimen/spacing_2x"
        android:layout_marginRight="@dimen/spacing_1x"
        android:background="@drawable/bg_delete_btn"
        android:text="@string/close_text"
        app:layout_constraintLeft_toRightOf="@id/secondOperand"
        app:layout_constraintRight_toLeftOf="@id/calculate"
        app:layout_constraintTop_toBottomOf="@id/plus"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/usedOperationsRecycle"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@id/resetBtn"
        app:layout_constraintTop_toBottomOf="@id/firstOperand"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        android:orientation="vertical"/>

    <TextView
        android:id="@+id/resetBtn"
        style="@style/DeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/spacing_7x"
        android:layout_marginBottom="@dimen/spacing_2x"
        android:padding="@dimen/spacing_1.5x"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>